2001-07-25  Rafael Laboissiere  <rafael@laboissiere.net>

       * octave-config.in: New file.
       * Makeconf.in (do-subst-default-vals): Substitute OCTAVE_VERSION.
       * Makefile.in (TARGETS): Add octave-config to list.
       * octMakefile.in (DISTFILES): Add octave-config.in to list.
       (BINDISTFILES): Add octave-config to list.
       (all): Add octave-config dependency.
       (octave-config): New rule.
       (install): Install octave-config.
       (uninstall): Delete octave-config from bindir.
       (maintainer-clean): Delete octave-config.
       (binary-dist): Add octave-config dependency.

2001-06-29  Mumit Khan  <khan@nanotech.wisc.edu>

	* aclocal.m4 (OCTAVE_CXX_ABI): Use "sun_v5" instead of "sun".

	* aclocal.m4 (OCTAVE_CXX_ABI): New macro.
	(OCTAVE_CXX_PREPENDS_UNDERSCORE): Add missing return value.
	* configure.in: Use.
	* acconfig.h (CXX_ABI): New macro.

2001-05-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Quote the call to AC_CHECK_FUNC inside the
	AC_CHECK_LIB macro when checking for lapack.  For autoconf 2.50

	* aclocal.m4: Changes for autoconf 2.50:
	Convert dnl comments inside AC_DEFUN to ###.
	(OCTAVE_FLIBS): Use [] quoting instead of changequote.

2001-05-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in: Remove remaining references to readline.
	(CONF_DISTFILES): Add autogen.sh to the list.

2001-05-02  Mumit Khan  <khan@nanotech.wisc.edu>

	* configure.in: Support for --with-fftw.
	(FFT_DIR, FFTW_LIBS): New substitutions.
	* Makeconf.in (FFTW_LIBS): New variable.
	* acconfig.h (HAVE_FFTW): New macro.

2001-04-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_ENABLE_READLINE): Require readline unless
	--disable-readline is specified.

	* configure.in: Don't define TERMLIBS.  Do add terminal lib(s) to LIBS.
	* octave-bug.in: Delete references to TERMLIBS.
	* Makeconf.in: Likewise.

	* Makeconf.in (LIBREADLINE): Delete substitution.
	(do-subst-config-vals): Likewise.