@@ -358,6 +358,8 @@ sed < $< \
   -e "s;%OCTAVE_CONF_CXXPICFLAG%;\"${CXXPICFLAG}\";" \
   -e "s;%OCTAVE_CONF_CXX_VERSION%;\"${CXX_VERSION}\";" \
   -e "s;%OCTAVE_CONF_DEFAULT_PAGER%;\"${DEFAULT_PAGER}\";" \
+  -e "s;%OCTAVE_CONF_DEPEND_FLAGS%;\"${DEPEND_FLAGS}\";" \
+  -e "s;%OCTAVE_CONF_DEPEND_EXTRA_SED_PATTERN%;\"${DEPEND_EXTRA_SED_PATTERN}\";" \
   -e "s;%OCTAVE_CONF_DLFCN_INCFLAGS%;\"${DLFCN_INCFLAGS}\";" \
   -e "s;%OCTAVE_CONF_EXE%;\"${EXE}\";" \
   -e "s;%OCTAVE_CONF_F2C%;\"${F2C}\";" \
